--- a/NetflixPrize_2.ipynb
+++ b/NetflixPrize_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,12 +119,13 @@
     "ratings=np.asarray(df['Rating']).reshape(-1,1)\n",
     "#ratings=df['Rating']\n",
     "print(X.shape)\n",
-    "print(ratings.shape)"
+    "print(ratings.shape)\n",
+    "X,ratings=shuffle(X,ratings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,23 +256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "471.74917697906494\n",
-      "-0.15281695097850712 1.1646612214560201 -0.11561538536681937 1.1463648757897293\n",
-      "481.4578561782837\n",
-      "-0.1531907358813609 1.1661001236333077 -0.1192288546677085 1.1478479932780807\n",
-      "478.0649871826172\n",
-      "-0.14495764794730603 1.1677591551373108 -0.12369158337504182 1.1487229854198209\n",
-      "541.4026155471802\n",
-      "-0.1326883210204901 1.1528585049059301 -0.11484886233758407 1.1462018500405524\n",
-      "519.696811914444\n",
-      "-0.1300558592810519 1.1481567942006532 -0.1265319713873574 1.153189033653985\n"
+      "3504.8429765701294\n",
+      "-0.020628920451131405 1.0963796344203762 -0.02040980623921551 1.09623097919608\n",
+      "3504.5428726673126\n",
+      "-0.022109307132297973 1.0973736634231532 -0.022151501421408204 1.097116327567494\n",
+      "3501.406688451767\n",
+      "-0.0218913690590965 1.0969957217009798 -0.02209331762001021 1.097150334376707\n",
+      "3510.693845510483\n",
+      "-0.0196431325102302 1.0955876251735492 -0.01955567546268111 1.0958376660442564\n",
+      "3498.1437599658966\n",
+      "-0.020206826853058413 1.0961540379177992 -0.019998240231482223 1.0960095725650643\n"
      ]
     }
    ],
@@ -295,8 +296,8 @@
     "    #print(np.shape(X_train))   \n",
     "    #print(np.shape(Y_train))   \n",
     "    start = time.time()\n",
-    "    omega_item,omega0_item,V_item=mini_batch_gradient_descent(X_train,Y_train,K=3,learning_rate = 0.01,num_epoches=3,\n",
-    "                                                            batch_size=100000)\n",
+    "    omega_item,omega0_item,V_item=mini_batch_gradient_descent(X_train,Y_train,K=3,learning_rate = 0.01,num_epoches=5,\n",
+    "                                                            batch_size=10000)\n",
     "    stop = time.time()\n",
     "    duration = stop-start\n",
     "    print(duration)\n",
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -349,43 +350,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>RMSE</td>\n",
-       "      <td>1.164661</td>\n",
-       "      <td>1.166100</td>\n",
-       "      <td>1.167759</td>\n",
-       "      <td>1.152859</td>\n",
-       "      <td>1.148157</td>\n",
-       "      <td>1.159907</td>\n",
-       "      <td>0.007879</td>\n",
+       "      <td>1.096380</td>\n",
+       "      <td>1.097374</td>\n",
+       "      <td>1.096996</td>\n",
+       "      <td>1.095588</td>\n",
+       "      <td>1.096154</td>\n",
+       "      <td>1.096498</td>\n",
+       "      <td>0.000629</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>R^2</td>\n",
-       "      <td>-0.152817</td>\n",
-       "      <td>-0.153191</td>\n",
-       "      <td>-0.144958</td>\n",
-       "      <td>-0.132688</td>\n",
-       "      <td>-0.130056</td>\n",
-       "      <td>-0.142742</td>\n",
-       "      <td>0.009773</td>\n",
+       "      <td>-0.020629</td>\n",
+       "      <td>-0.022109</td>\n",
+       "      <td>-0.021891</td>\n",
+       "      <td>-0.019643</td>\n",
+       "      <td>-0.020207</td>\n",
+       "      <td>-0.020896</td>\n",
+       "      <td>0.000957</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>RMSE train</td>\n",
-       "      <td>1.146365</td>\n",
-       "      <td>1.146365</td>\n",
-       "      <td>1.148723</td>\n",
-       "      <td>1.146202</td>\n",
-       "      <td>1.153189</td>\n",
-       "      <td>1.148465</td>\n",
-       "      <td>0.002542</td>\n",
+       "      <td>1.096231</td>\n",
+       "      <td>1.096231</td>\n",
+       "      <td>1.097150</td>\n",
+       "      <td>1.095838</td>\n",
+       "      <td>1.096010</td>\n",
+       "      <td>1.096469</td>\n",
+       "      <td>0.000557</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>R^2 train</td>\n",
-       "      <td>-0.115615</td>\n",
-       "      <td>-0.119229</td>\n",
-       "      <td>-0.123692</td>\n",
-       "      <td>-0.114849</td>\n",
-       "      <td>-0.126532</td>\n",
-       "      <td>-0.119983</td>\n",
-       "      <td>0.004531</td>\n",
+       "      <td>-0.020410</td>\n",
+       "      <td>-0.022152</td>\n",
+       "      <td>-0.022093</td>\n",
+       "      <td>-0.019556</td>\n",
+       "      <td>-0.019998</td>\n",
+       "      <td>-0.020842</td>\n",
+       "      <td>0.001080</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -393,19 +394,19 @@
       ],
       "text/plain": [
        "                   1         2         3         4         5         E  \\\n",
-       "RMSE        1.164661  1.166100  1.167759  1.152859  1.148157  1.159907   \n",
-       "R^2        -0.152817 -0.153191 -0.144958 -0.132688 -0.130056 -0.142742   \n",
-       "RMSE train  1.146365  1.146365  1.148723  1.146202  1.153189  1.148465   \n",
-       "R^2 train  -0.115615 -0.119229 -0.123692 -0.114849 -0.126532 -0.119983   \n",
+       "RMSE        1.096380  1.097374  1.096996  1.095588  1.096154  1.096498   \n",
+       "R^2        -0.020629 -0.022109 -0.021891 -0.019643 -0.020207 -0.020896   \n",
+       "RMSE train  1.096231  1.096231  1.097150  1.095838  1.096010  1.096469   \n",
+       "R^2 train  -0.020410 -0.022152 -0.022093 -0.019556 -0.019998 -0.020842   \n",
        "\n",
        "                  SD  \n",
-       "RMSE        0.007879  \n",
-       "R^2         0.009773  \n",
-       "RMSE train  0.002542  \n",
-       "R^2 train   0.004531  "
+       "RMSE        0.000629  \n",
+       "R^2         0.000957  \n",
+       "RMSE train  0.000557  \n",
+       "R^2 train   0.001080  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,32 +425,6 @@
     "df_res = pd.DataFrame(data, index =['RMSE', 'R^2','RMSE train','R^2 train']) \n",
     "\n",
     "df_res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(20096101, 497959)\n",
-      "(20096101, 497959)\n",
-      "(20096101, 497959)\n",
-      "(20096101, 497959)\n",
-      "(20096101, 497959)\n"
-     ]
-    }
-   ],
-   "source": [
-    "cross_val_part_size=X.shape[0]//(cross_val_parts_amount)\n",
-    "cross_val_part_size\n",
-    "j=0\n",
-    "for j in range(cross_val_parts_amount):\n",
-    "    X_test=X.tocsr()[item*cross_val_part_size:(item+1)*cross_val_part_size,:]\n",
-    "    print(np.shape(X_test))"
    ]
   },
   {
