change parameters to 0.5 finally good rmse

--- a/NetflixPrize_2.ipynb
+++ b/NetflixPrize_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,46 +19,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Veronika_Revyakina\\Anaconda3\\lib\\site-packages\\numpy\\lib\\arraysetops.py:569: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  mask |= (ar1 == a)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Unnamed: 0  User_Id  Rating  Movie_Id\n",
-      "0                   1  1488844     3.0         1\n",
-      "5000000       5000996   501954     2.0       996\n",
-      "10000000     10001962   404654     5.0      1962\n",
-      "15000000     15002876   886608     2.0      2876\n",
-      "20000000     20003825  1193835     2.0      3825\n",
-      "25000000     25004661  1899206     3.0      4661\n",
-      "30000000     30005496   154804     4.0      5496\n",
-      "35000000     35006274  2078749     5.0      6274\n",
-      "40000000     40007057   450763     5.0      7057\n",
-      "45000000     45007991   102092     3.0      7991\n",
-      "50000000     50009023   220298     5.0      9023\n",
-      "55000000     55010042   550530     5.0     10042\n",
-      "60000000     60011038   222570     3.0     11038\n",
-      "65000000     65011875  1273080     5.0     11875\n",
-      "70000000     70012676  2026970     5.0     12676\n",
-      "75000000     75013582   506044     4.0     13582\n",
-      "80000000     80014453   353605     2.0     14453\n",
-      "85000000     85015116   664606     3.0     15116\n",
-      "90000000     90016008  2213715     3.0     16008\n",
-      "95000000     95016879  1589401     5.0     16879\n",
-      "100000000   100017627  2314006     4.0     17627\n"
+      "           User_Id  Rating  Movie_Id\n",
+      "1          1488844     3.0         1\n",
+      "5000996     501954     2.0       996\n",
+      "10001962    404654     5.0      1962\n",
+      "15002876    886608     2.0      2876\n",
+      "20003825   1193835     2.0      3825\n",
+      "25004661   1899206     3.0      4661\n",
+      "30005496    154804     4.0      5496\n",
+      "35006274   2078749     5.0      6274\n",
+      "40007057    450763     5.0      7057\n",
+      "45007991    102092     3.0      7991\n",
+      "50009023    220298     5.0      9023\n",
+      "55010042    550530     5.0     10042\n",
+      "60011038    222570     3.0     11038\n",
+      "65011875   1273080     5.0     11875\n",
+      "70012676   2026970     5.0     12676\n",
+      "75013582    506044     4.0     13582\n",
+      "80014453    353605     2.0     14453\n",
+      "85015116    664606     3.0     15116\n",
+      "90016008   2213715     3.0     16008\n",
+      "95016879   1589401     5.0     16879\n",
+      "100017627  2314006     4.0     17627\n"
      ]
     }
    ],
    "source": [
-    "df=pd.read_csv(\"NetflixProcessedDataFile.csv\").drop_duplicates()\n",
+    "df=pd.read_csv(\"NetflixProcessedDataFile.csv\",index_col=0).drop_duplicates()\n",
     "print(df.iloc[::5000000, :])#START:STOP:STEP (5000000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -125,20 +133,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def svd_predict(X_input,omega,omega0,V,sum_const):\n",
-    "#     #linear_part=omega0+X.dot(omega)\n",
-    "#     #V_part=(X.dot(V)**2)-X.power(2).dot(V**2) # (24053764,3)\n",
-    "#     #return omega0+X.dot(omega)+(0.5*np.sum(np.square(sum_const)-X.power(2).dot(np.square(V)),axis=1))# (24053764,1)\n",
-    "#     return omega0 + X_input.dot(omega) + (0.5 * np.sum((sum_const**2) - (X_input.power(2)).dot(V**2), axis=1)) \n",
     "def svd_predict(X,omega,omega0,V,sum_const):\n",
-    "    #omega (475257,1)\n",
-    "    #omega0 goes to (24053764,1) in sum \n",
-    "    # V (475257,3)\n",
-    "    # X (24053764, 475257)\n",
     "    prod=X.dot(omega)#(24053764,1)\n",
     "    linear_part=omega0+prod\n",
     "    #V_part=np.square(sum_const)-X.power(2).dot(np.square(V)) # (24053764,3)\n",
@@ -149,6 +148,7 @@
     "def root_mean_square_error(ratings_predict,ratings_actual):\n",
     "    #ratings_predict=svd_predict(X,omega,omega0,V)\n",
     "    #summands=np.power(ratings_actual-ratings_predict,2)\n",
+    "    #return np.sqrt(mean_squared_error(ratings_actual, ratings_predict))\n",
     "    mse=np.sum(np.power(ratings_actual-ratings_predict,2))/len(ratings_predict)\n",
     "    return np.sqrt(mse)\n",
     "   \n",
@@ -161,34 +161,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function to create a list containing mini-batches \n",
-    "def create_mini_batch(data,i, batch_size): \n",
-    "    mini_batch = data.tocsr()[i * batch_size:(i + 1)*batch_size, :] \n",
-    "    X_mini = mini_batch[:, :-1] \n",
-    "    Y_mini = mini_batch[:, -1].reshape((-1, 1)) \n",
-    "        \n",
-    "    if data.shape[0] % batch_size != 0: \n",
-    "        mini_batch = data[i * batch_size:data.shape[0]] \n",
-    "        X_mini = mini_batch[:, :-1] \n",
-    "        Y_mini = mini_batch[:, -1].reshape((-1, 1)) \n",
-    "       \n",
-    "    return X_mini,Y_mini\n",
-    "\n",
-    "def shuffle_data(matrix):\n",
-    "    indices = np.arange(matrix.shape[0]) #gets the number of rows \n",
-    "    np.random.shuffle(indices)\n",
-    "    shuffled_matrix = matrix[list(indices)] \n",
-    "\n",
     "def mini_batch_gradient_descent(X_train,Y_train,K,learning_rate,num_epoches,batch_size):\n",
-    "    omega=np.random.sample((X_train.shape[1],1)) \n",
-    "    #omega=np.array([0.5]*(X_train.shape[1]))\n",
+    "    #omega=np.random.sample((X_train.shape[1],1)) \n",
+    "    #omega=(np.array([0.5]*(X_train.shape[1])).reshape(X_train.shape[1],1))\n",
+    "    omega=np.full((X_train.shape[1], 1), 0.5)\n",
     "    omega0=0.5\n",
     "    #V=np.random.sample((X_train.shape[1],K))\n",
-    "    V=(np.array([0.5]*(X_train.shape[1]*K)).reshape(X_train.shape[1],K))\n",
+    "    #V=(np.array([0.5]*(X_train.shape[1]*K)).reshape(X_train.shape[1],K))\n",
+    "    V=np.full((X_train.shape[1], K), 0.5)\n",
     "    r2_tr=[]\n",
     "    rmse_tr=[]\n",
     "   \n",
@@ -213,66 +197,34 @@
     "            omega=omega+learning_rate*2*((X_mini.T).dot(error))/N #(475257,1)\n",
     "            omega0=omega0+learning_rate*2*np.sum(error)/N #(1,1)\n",
     "            V = V + learning_rate*2*((X_mini.T.dot(np.multiply(error,sum_const)))-np.multiply(V, X_mini.T.dot(error)))/N\n",
-    "#             for l in range(K):\n",
-    "#                 for j in range (N):\n",
-    "#                     Xj_col=X_mini.tocsr()[:,j]#(24053764, 1)\n",
-    "#                     dV1=np.multiply(Xj_col,np.sum(X_mini*V[j][l],axis=1).reshape(-1,1))\n",
-    "                \n",
-    "#                     dV2=V[j][l]*Xj_col.power(2)#(24053764, 1)\n",
-    "#                     dV=(dV1-dV2)\n",
-    "                    \n",
-    "#                     dV=(dV1-dV2)\n",
-    "#                     a=np.asarray((error.T).dot(dV)).reshape(-1,1)\n",
-    "#                     print(a)\n",
-    "#                     print(V[j][l]+a)\n",
-    "#                     #print(np.shape(dV))\n",
-    "#                     #print((learning_rate*2*((error.T).dot(dV))/N).to_dense)\n",
-    "#                     #print (V)\n",
-    "#                     #print(np.shape(V[j][l].reshape(-1))\n",
-    "#                     #print(np.shape(V[j][l].reshape(1,-1).sum(learning_rate*2*(error.T).dot(dV).reshape(1,-1)/N)))\n",
-    "                    \n",
-    "#                     V[j][l]=V[j][l]+learning_rate*2*((error.T).dot(dV))/N #(1,1)\n",
+    "\n",
     "            ratings_predict=svd_predict(X_mini,omega,omega0,V,sum_const)\n",
     "            r2_tr.append(r_squared(ratings_predict, y_mini))\n",
     "            rmse_tr.append(root_mean_square_error(ratings_predict, y_mini))\n",
     "            #print(rmse_tr)\n",
     "            #print(r2_tr)\n",
-    "    return omega,omega0,V\n",
-    "\n",
-    "# error=ratings-svd_predict(X,omega,omega0,V)\n",
-    "# N=X.shape[0]\n",
-    "# learning_rate=0.001\n",
-    "# omega=omega+learning_rate*2*((X.T).dot(error))/N #(475257,1)\n",
-    "# omega0=omega0+learning_rate*2*np.sum(error)/N\n",
-    "# for l in range(3):\n",
-    "#     for j in range (N):\n",
-    "#         Xj_col=X.tocsr()[:,j] #(24053764, 1)\n",
-    "#         #print(np.shape(np.multiply(Xj_col,np.sum(X*V[j][l],axis=1).reshape(-1,1)))) #(24053764, 1)\n",
-    "#         #print(np.shape(V[j][l]*np.square(Xj_col)))\n",
-    "#         dV=np.multiply(Xj_col,np.sum(X*V[j][l],axis=1).reshape(-1,1))-V[j][l]*np.square(Xj_col)\n",
-    "#         #print(np.shape((error.T).dot(dV))) #(1, 1)\n",
-    "#         V[j][l]=V[j][l]+learning_rate*2*((error.T).dot(dV))/N #(1,1)"
+    "    return omega,omega0,V"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3504.8429765701294\n",
-      "-0.020628920451131405 1.0963796344203762 -0.02040980623921551 1.09623097919608\n",
-      "3504.5428726673126\n",
-      "-0.022109307132297973 1.0973736634231532 -0.022151501421408204 1.097116327567494\n",
-      "3501.406688451767\n",
-      "-0.0218913690590965 1.0969957217009798 -0.02209331762001021 1.097150334376707\n",
-      "3510.693845510483\n",
-      "-0.0196431325102302 1.0955876251735492 -0.01955567546268111 1.0958376660442564\n",
-      "3498.1437599658966\n",
-      "-0.020206826853058413 1.0961540379177992 -0.019998240231482223 1.0960095725650643\n"
+      "469.857412815094\n",
+      "0.010662515055604116 1.0793783636805452 0.01067270100561446 1.0794216932390956\n",
+      "474.4721620082855\n",
+      "0.010659036708014491 1.0793890778481028 0.010674899707278529 1.0794182768248748\n",
+      "474.1438162326813\n",
+      "0.010674330676887833 1.0794801291164673 0.010664257958878487 1.0793992479912322\n",
+      "471.3788721561432\n",
+      "0.010671055953146436 1.0793984197454107 0.010667797170874072 1.0794181907338827\n",
+      "503.83174419403076\n",
+      "0.010664635786712728 1.0794309138930966 0.010672378610222744 1.079408431481405\n"
      ]
     }
    ],
@@ -296,8 +248,8 @@
     "    #print(np.shape(X_train))   \n",
     "    #print(np.shape(Y_train))   \n",
     "    start = time.time()\n",
-    "    omega_item,omega0_item,V_item=mini_batch_gradient_descent(X_train,Y_train,K=3,learning_rate = 0.01,num_epoches=5,\n",
-    "                                                            batch_size=10000)\n",
+    "    omega_item,omega0_item,V_item=mini_batch_gradient_descent(X_train,Y_train,K=3,learning_rate = 0.01,num_epoches=3,\n",
+    "                                                            batch_size=100000)\n",
     "    stop = time.time()\n",
     "    duration = stop-start\n",
     "    print(duration)\n",
@@ -314,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -350,43 +302,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>RMSE</td>\n",
-       "      <td>1.096380</td>\n",
-       "      <td>1.097374</td>\n",
-       "      <td>1.096996</td>\n",
-       "      <td>1.095588</td>\n",
-       "      <td>1.096154</td>\n",
-       "      <td>1.096498</td>\n",
-       "      <td>0.000629</td>\n",
+       "      <td>1.079378</td>\n",
+       "      <td>1.079389</td>\n",
+       "      <td>1.079480</td>\n",
+       "      <td>1.079398</td>\n",
+       "      <td>1.079431</td>\n",
+       "      <td>1.079415</td>\n",
+       "      <td>0.000037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>R^2</td>\n",
-       "      <td>-0.020629</td>\n",
-       "      <td>-0.022109</td>\n",
-       "      <td>-0.021891</td>\n",
-       "      <td>-0.019643</td>\n",
-       "      <td>-0.020207</td>\n",
-       "      <td>-0.020896</td>\n",
-       "      <td>0.000957</td>\n",
+       "      <td>0.010663</td>\n",
+       "      <td>0.010659</td>\n",
+       "      <td>0.010674</td>\n",
+       "      <td>0.010671</td>\n",
+       "      <td>0.010665</td>\n",
+       "      <td>0.010666</td>\n",
+       "      <td>0.000006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>RMSE train</td>\n",
-       "      <td>1.096231</td>\n",
-       "      <td>1.096231</td>\n",
-       "      <td>1.097150</td>\n",
-       "      <td>1.095838</td>\n",
-       "      <td>1.096010</td>\n",
-       "      <td>1.096469</td>\n",
-       "      <td>0.000557</td>\n",
+       "      <td>1.079422</td>\n",
+       "      <td>1.079422</td>\n",
+       "      <td>1.079399</td>\n",
+       "      <td>1.079418</td>\n",
+       "      <td>1.079408</td>\n",
+       "      <td>1.079413</td>\n",
+       "      <td>0.000008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>R^2 train</td>\n",
-       "      <td>-0.020410</td>\n",
-       "      <td>-0.022152</td>\n",
-       "      <td>-0.022093</td>\n",
-       "      <td>-0.019556</td>\n",
-       "      <td>-0.019998</td>\n",
-       "      <td>-0.020842</td>\n",
-       "      <td>0.001080</td>\n",
+       "      <td>0.010673</td>\n",
+       "      <td>0.010675</td>\n",
+       "      <td>0.010664</td>\n",
+       "      <td>0.010668</td>\n",
+       "      <td>0.010672</td>\n",
+       "      <td>0.010670</td>\n",
+       "      <td>0.000004</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -394,19 +346,19 @@
       ],
       "text/plain": [
        "                   1         2         3         4         5         E  \\\n",
-       "RMSE        1.096380  1.097374  1.096996  1.095588  1.096154  1.096498   \n",
-       "R^2        -0.020629 -0.022109 -0.021891 -0.019643 -0.020207 -0.020896   \n",
-       "RMSE train  1.096231  1.096231  1.097150  1.095838  1.096010  1.096469   \n",
-       "R^2 train  -0.020410 -0.022152 -0.022093 -0.019556 -0.019998 -0.020842   \n",
+       "RMSE        1.079378  1.079389  1.079480  1.079398  1.079431  1.079415   \n",
+       "R^2         0.010663  0.010659  0.010674  0.010671  0.010665  0.010666   \n",
+       "RMSE train  1.079422  1.079422  1.079399  1.079418  1.079408  1.079413   \n",
+       "R^2 train   0.010673  0.010675  0.010664  0.010668  0.010672  0.010670   \n",
        "\n",
        "                  SD  \n",
-       "RMSE        0.000629  \n",
-       "R^2         0.000957  \n",
-       "RMSE train  0.000557  \n",
-       "R^2 train   0.001080  "
+       "RMSE        0.000037  \n",
+       "R^2         0.000006  \n",
+       "RMSE train  0.000008  \n",
+       "R^2 train   0.000004  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
