--- a/NetflixPrize_2.ipynb
+++ b/NetflixPrize_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,14 +133,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def svd_predict(X,omega,omega0,V,sum_const):\n",
+    "def svd_predict(X,omega,omega0,V):\n",
     "    prod=X.dot(omega)#(24053764,1)\n",
     "    linear_part=omega0+prod\n",
     "    #V_part=np.square(sum_const)-X.power(2).dot(np.square(V)) # (24053764,3)\n",
+    "    sum_const=X.dot(V)\n",
     "    V_part=(sum_const**2)-X.power(2).dot((V)**2) \n",
     "    sqr_part=(0.5*np.sum(V_part,axis=1)).reshape(-1,1) # (24053764,1)\n",
     "    return linear_part+sqr_part # (24053764,1)\n",
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,14 +192,14 @@
     "            #print(np.shape(y_mini)) \n",
     "            N=X_mini.shape[0] # 24053764\n",
     "            #PARAMETERS\n",
-    "            sum_const=X_mini.dot(V)\n",
-    "            ratings_predict=svd_predict(X_mini,omega,omega0,V,sum_const)\n",
+    "            #sum_const=X_mini.dot(V)\n",
+    "            ratings_predict=svd_predict(X_mini,omega,omega0,V)\n",
     "            error=y_mini-ratings_predict #(24053764,1)\n",
     "            omega=omega+learning_rate*2*((X_mini.T).dot(error))/N #(475257,1)\n",
     "            omega0=omega0+learning_rate*2*np.sum(error)/N #(1,1)\n",
-    "            V = V + learning_rate*2*((X_mini.T.dot(np.multiply(error,sum_const)))-np.multiply(V, X_mini.T.dot(error)))/N\n",
+    "            V = V + learning_rate*2*((X_mini.T.dot(np.multiply(error,X_mini.dot(V))))-np.multiply(V, (X_mini.T).power(2).dot(error)))/N\n",
     "\n",
-    "            ratings_predict=svd_predict(X_mini,omega,omega0,V,sum_const)\n",
+    "            ratings_predict=svd_predict(X_mini,omega,omega0,V)\n",
     "            r2_tr.append(r_squared(ratings_predict, y_mini))\n",
     "            rmse_tr.append(root_mean_square_error(ratings_predict, y_mini))\n",
     "            #print(rmse_tr)\n",
@@ -208,23 +209,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "469.857412815094\n",
-      "0.010662515055604116 1.0793783636805452 0.01067270100561446 1.0794216932390956\n",
-      "474.4721620082855\n",
-      "0.010659036708014491 1.0793890778481028 0.010674899707278529 1.0794182768248748\n",
-      "474.1438162326813\n",
-      "0.010674330676887833 1.0794801291164673 0.010664257958878487 1.0793992479912322\n",
-      "471.3788721561432\n",
-      "0.010671055953146436 1.0793984197454107 0.010667797170874072 1.0794181907338827\n",
-      "503.83174419403076\n",
-      "0.010664635786712728 1.0794309138930966 0.010672378610222744 1.079408431481405\n"
+      "556.678252696991\n",
+      "0.013038031483999846 1.078172636447814 0.013034482245997792 1.0781097589861006\n",
+      "553.9942624568939\n",
+      "0.013028330982371772 1.078208302815823 0.013040470843213137 1.078098898823685\n",
+      "551.3095593452454\n",
+      "0.013033618825896265 1.0779328104448904 0.013040261181429647 1.0781671626464888\n",
+      "547.9190123081207\n",
+      "0.01303654332885995 1.0779790485305611 0.01303718018082134 1.078156881254667\n",
+      "561.1664497852325\n",
+      "0.01302900243973415 1.078324397944981 0.013038567897265985 1.0780708040732911\n"
      ]
     }
    ],
@@ -249,16 +250,16 @@
     "    #print(np.shape(Y_train))   \n",
     "    start = time.time()\n",
     "    omega_item,omega0_item,V_item=mini_batch_gradient_descent(X_train,Y_train,K=3,learning_rate = 0.01,num_epoches=3,\n",
-    "                                                            batch_size=100000)\n",
+    "                                                            batch_size=80000)\n",
     "    stop = time.time()\n",
     "    duration = stop-start\n",
     "    print(duration)\n",
-    "    sum_const=X_test.dot(V_item)                     \n",
-    "    ratings_predict=svd_predict(X_test,omega_item,omega0_item,V_item,sum_const)\n",
+    "    #sum_const=X_test.dot(V_item)                     \n",
+    "    ratings_predict=svd_predict(X_test,omega_item,omega0_item,V_item)\n",
     "    r2.insert(item,r_squared(ratings_predict,Y_test))\n",
     "    rmse.insert(item,root_mean_square_error(ratings_predict,Y_test))\n",
-    "    sum_const=X_train.dot(V_item)                     \n",
-    "    ratings_predict=svd_predict(X_train,omega_item,omega0_item,V_item,sum_const)                    \n",
+    "    #sum_const=X_train.dot(V_item)                     \n",
+    "    ratings_predict=svd_predict(X_train,omega_item,omega0_item,V_item)                    \n",
     "    r2_train.insert(item,r_squared(ratings_predict,Y_train))\n",
     "    rmse_train.insert(item,root_mean_square_error(ratings_predict,Y_train))\n",
     "    print(r2[item],rmse[item],r2_train[item],rmse_train[item])"
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -302,43 +303,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>RMSE</td>\n",
-       "      <td>1.079378</td>\n",
-       "      <td>1.079389</td>\n",
-       "      <td>1.079480</td>\n",
-       "      <td>1.079398</td>\n",
-       "      <td>1.079431</td>\n",
-       "      <td>1.079415</td>\n",
-       "      <td>0.000037</td>\n",
+       "      <td>1.078173</td>\n",
+       "      <td>1.078208</td>\n",
+       "      <td>1.077933</td>\n",
+       "      <td>1.077979</td>\n",
+       "      <td>1.078324</td>\n",
+       "      <td>1.078123</td>\n",
+       "      <td>0.000146</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>R^2</td>\n",
-       "      <td>0.010663</td>\n",
-       "      <td>0.010659</td>\n",
-       "      <td>0.010674</td>\n",
-       "      <td>0.010671</td>\n",
-       "      <td>0.010665</td>\n",
-       "      <td>0.010666</td>\n",
-       "      <td>0.000006</td>\n",
+       "      <td>0.013038</td>\n",
+       "      <td>0.013028</td>\n",
+       "      <td>0.013034</td>\n",
+       "      <td>0.013037</td>\n",
+       "      <td>0.013029</td>\n",
+       "      <td>0.013033</td>\n",
+       "      <td>0.000004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>RMSE train</td>\n",
-       "      <td>1.079422</td>\n",
-       "      <td>1.079422</td>\n",
-       "      <td>1.079399</td>\n",
-       "      <td>1.079418</td>\n",
-       "      <td>1.079408</td>\n",
-       "      <td>1.079413</td>\n",
-       "      <td>0.000008</td>\n",
+       "      <td>1.078110</td>\n",
+       "      <td>1.078110</td>\n",
+       "      <td>1.078167</td>\n",
+       "      <td>1.078157</td>\n",
+       "      <td>1.078071</td>\n",
+       "      <td>1.078121</td>\n",
+       "      <td>0.000036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>R^2 train</td>\n",
-       "      <td>0.010673</td>\n",
-       "      <td>0.010675</td>\n",
-       "      <td>0.010664</td>\n",
-       "      <td>0.010668</td>\n",
-       "      <td>0.010672</td>\n",
-       "      <td>0.010670</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>0.013034</td>\n",
+       "      <td>0.013040</td>\n",
+       "      <td>0.013040</td>\n",
+       "      <td>0.013037</td>\n",
+       "      <td>0.013039</td>\n",
+       "      <td>0.013038</td>\n",
+       "      <td>0.000002</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -346,19 +347,19 @@
       ],
       "text/plain": [
        "                   1         2         3         4         5         E  \\\n",
-       "RMSE        1.079378  1.079389  1.079480  1.079398  1.079431  1.079415   \n",
-       "R^2         0.010663  0.010659  0.010674  0.010671  0.010665  0.010666   \n",
-       "RMSE train  1.079422  1.079422  1.079399  1.079418  1.079408  1.079413   \n",
-       "R^2 train   0.010673  0.010675  0.010664  0.010668  0.010672  0.010670   \n",
+       "RMSE        1.078173  1.078208  1.077933  1.077979  1.078324  1.078123   \n",
+       "R^2         0.013038  0.013028  0.013034  0.013037  0.013029  0.013033   \n",
+       "RMSE train  1.078110  1.078110  1.078167  1.078157  1.078071  1.078121   \n",
+       "R^2 train   0.013034  0.013040  0.013040  0.013037  0.013039  0.013038   \n",
        "\n",
        "                  SD  \n",
-       "RMSE        0.000037  \n",
-       "R^2         0.000006  \n",
-       "RMSE train  0.000008  \n",
-       "R^2 train   0.000004  "
+       "RMSE        0.000146  \n",
+       "R^2         0.000004  \n",
+       "RMSE train  0.000036  \n",
+       "R^2 train   0.000002  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
